# GSV-TTS-Lite

./: .gitignore  README.md  README_EN.md  README_JA.md  pyproject.toml
API/: README.md  fastapi_server_example.py  requirements.txt
gsv_tts/: Config.py  Download.py  Loader.py  TTS.py  TextProcessor.py
gsv_tts/GPT_SoVITS/Featurizer/: cnroberta.py
gsv_tts/GPT_SoVITS/G2P/: __init__.py
gsv_tts/GPT_SoVITS/G2P/English/: english.py  g2p_en.py
gsv_tts/GPT_SoVITS/GPT/: t2s_model.py  t2s_model_flash_attn.py
gsv_tts/GPT_SoVITS/SoVITS/: models.py
